Closed Bug 1272970 Opened 9 years ago Closed 9 years ago

test_transitions_per_property.html failure after enable MOZ_ENABLE_MASK_AS_SHORTHAND

Categories

(Core :: Layout, defect)

49 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: u459114, Assigned: u459114)

References

Details

Attachments

(1 file)

Test case failed after mask-position become a shorthand property[1]. Failure message: layout/style/test/test_transitions_per_property.html | uncaught exception - NS_ERROR_ILLEGAL_VALUE: Component returned failure code: 0x80070057 [1] https://hg.mozilla.org/mozilla-central/diff/c0a618d9fa6f/layout/style/nsCSSPropList.h#l2737
Blocks: mask-ship
Attachment #8752591 - Flags: review?(mstange)
Comment on attachment 8752591 [details] MozReview Request: Bug 1272970 - fix test_transitions_per_property failure; https://reviewboard.mozilla.org/r/52656/#review49576 Hmm, do we invalidate correctly for dynamic changes to mask-position? If not, we may need to convert nsChangeHint_UpdateBackgroundPosition to nsChangeHint_RepaintFrame in the change handling for masks.
Attachment #8752591 - Flags: review?(mstange) → review+
Too bad, the answer is no. I am going to figure it out.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: