Bug 1272970 - fix test_transitions_per_property failure; r=mstange

MozReview-Commit-ID: 9y9gT0dagDv